# To_do_list_bot

./: README.md  To do ilst bot.py  pyproject.toml
src/: main.py  tasks_file.json  utils.py
tests/: test_utils.py
